--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "sqlConnection": "Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = bsStoreApp; Integrated Security = true;"
+    "sqlConnection": "Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = bsStoreAppDb; Integrated Security = true;"
   }
 }
